text not aligned -fixed

--- a/src/components/about/about.module.scss
+++ b/src/components/about/about.module.scss
@@ -232,6 +232,7 @@ section {
         }
         .partTwo {
           text-align: center;
+          margin: 0;
         }
       }
       img {
